Change Scaledspace Materials of almost everything
* Change ScaledVersion material Type from Vacuum to AtmosphericStandard on almost all airless celestial bodies and Gwargin. This, along with a little extra boilerplate to get it to work, makes airless worlds look much sharper and more realistic.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/0_Gwargin.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/0_Gwargin.cfg
@@ -368,7 +368,7 @@
 		}
 		ScaledVersion
 		{
-			type = Atmospheric
+			type = AtmosphericStandard
 			fadeStart = 15000
 			fadeEnd = 19000
 			OnDemand
@@ -378,8 +378,8 @@
 			}
 			Material
 			{
-                shininess = 0.0
-               	specColor = 0.0, 0.0, 0.0, 1
+                specColor = 0,0,0,1
+				shininess = 0.03
 				rimPower = 2
 				rimBlend = 0.5
 				rimColorRamp = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Blue.png
