--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/2_Ber.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/2_Ber.cfg
@@ -344,7 +344,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 9000
 			fadeEnd = 9250
 			OnDemand
@@ -352,10 +351,14 @@
 				texture = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Ber_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Ber_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.8
+				rimColor = 0
+				rimBlend = 0
+				color = 0.9,0.9,0.9,1
 			}
 		}
 	}
