--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
@@ -299,7 +299,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 9000
 			fadeEnd = 9250
 			OnDemand
@@ -307,10 +306,13 @@
 				texture = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Deibos_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Deibos_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 	}
