--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
@@ -76,16 +76,20 @@
         }
         ScaledVersion
         {
-            type = Vacuum
+      
             fadeStart = 30000
             fadeEnd = 45000
             Material
             {
                 texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Olu_Color.png
                 normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Olu_Normal.png
-		        shininess = 0
-                specColor = 0,0,0,1
+		        specColor = 0,0,0,1
+				shininess = 0.03
+				color = 0.9,0.9,0.9,1
+				rimColor = 0
+				rimBlend = 0
             }
+			%type = AtmosphericStandard
         }
         PQS 
         {
