--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
@@ -46,16 +46,18 @@
         }
         ScaledVersion
         {
-            type = Vacuum
             fadeStart = 30000
             fadeEnd = 45000
             Material
             {
                 texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Soval_Color.png
                 normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Soval_Normal.png
-		        shininess = 0
-                specColor = 0,0,0,1
+		        specColor = 0,0,0,1
+				shininess = 0.7
+				rimColor = 0
+				rimBlend = 0
             }
+			%type = AtmosphericStandard
         }
         PQS 
         {
