--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
@@ -47,16 +47,18 @@
         }
         ScaledVersion
         {
-            type = Vacuum
             fadeStart = 60000
             fadeEnd = 70000
             Material
             {
                 texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Fish_Color.png
                 normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Fish_Normal.png
-		        shininess = 0
-                specColor = 0,0,0,1
+		        specColor = 0,0,0,0
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
             }
+			%type = AtmosphericStandard
         }
         PQS 
         {
