--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
@@ -48,12 +48,15 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 2000
 			fadeEnd = 2500
+			%type = AtmosphericStandard
 			Material
 			{
 				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 			OnDemand
 			{
