--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Hemantreeantbumbalo.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Hemantreeantbumbalo.cfg
@@ -385,7 +385,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 15000
 			fadeEnd = 19000
 			OnDemand
@@ -393,10 +392,13 @@
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Hemantreeantbumbalo_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Hemantreeantbumbalo_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 	}
