--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Solin.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Solin.cfg
@@ -90,16 +90,19 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
+			%type = AtmosphericStandard
+			Material
+			{
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+				color = 0.9,0.9,0.9,1
+			}
 			OnDemand
 			{
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Solin_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Solin_Normal.dds
-			}
-			Material
-			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
 			}
 		}
 		PQS
