--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
@@ -71,11 +71,13 @@
 		}
 		ScaledVersion
 		{
+			%type = AtmosphericStandard
 			Material
 			{
-				color = 1, 1, 1, 1
-				specColor = 0, 0, 0, 1
-				shininess = 0.0
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 			OnDemand
 			{
