--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
@@ -61,11 +61,13 @@
 				color = 0.853846252,0.853846014,0.853846252,1
 				specColor = 0,0,0,1
 				shininess = 0.03
-				
+				rimColor = 0
+				rimBlend = 0
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Radlun_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/PluginData/Radlun_Normal.dds
 
 			}
+			%type = AtmosphericStandard
 		}
 		PQS
 		{
