--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_i_Montauk.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_i_Montauk.cfg
@@ -67,16 +67,15 @@
 			fadeEnd = 64000
 			Material
 			{
+				specColor = 0,0,0,1
 				shininess = 0.03
-				specColor = 0.1, 0.1, 0.1, 1
-				type = Vacuum
-				color = 1, 1, 1, 1
-				rimPower = 1
-				rimBlend = 0.3
+				rimColor = 0
+				rimBlend = 0
 				texture = PJ2\KopernicusFiles\1_InnerSystem\IlioAB_e\PluginData\Montauk_PQSColor.png
 				normals = PJ2\KopernicusFiles\1_InnerSystem\IlioAB_e\PluginData\Montauk_Normal.png
 			
 			}
+			%type = AtmosphericStandard
 		}
 		
 		Atmosphere				
