--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_ii_Tremolo.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_ii_Tremolo.cfg
@@ -96,11 +96,13 @@
 		{
 			fadeStart = 32000
 			fadeEnd = 64000
+			%type = AtmosphericStandard
 			Material
 			{
+				specColor = 0,0,0,1
 				shininess = 0.03
-				specColor = 0.1, 0.1, 0.1, 1
-				type = Vacuum
+				rimColor = 0
+				rimBlend = 0
 			}
 			OnDemand
 			{
