--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
@@ -52,9 +52,12 @@
 				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\IlioC_Greek_A_Normal.png
 				
 				color = 1, 1, 1, 1
-				specColor = 0, 0, 0, 1
-				shininess = 0.0
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
+			%type = AtmosphericStandard
 		
 		}
 		
