--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
@@ -43,15 +43,18 @@
 		
 		ScaledVersion
 		{
-				
+			%type = AtmosphericStandard
 			Material
 			{
 				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2moon2Colorv3.png
 				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\IlioC_Greek_C_Normal.png
 				
 				color = 1, 1, 1, 1
-				specColor = 0, 0, 0, 1
-				shininess = 0.0
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+				
 			}
 		
 		}
