--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/1_Buzz.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/1_Buzz.cfg
@@ -85,11 +85,15 @@
 		}
 		ScaledVersion
 		{
+			type = AtmosphericStandard
 			Material
 			{
 				specColor = 0,0,0,0
+				shininess = 0.03
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/PluginData/Buzz_Color.png
 				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/PluginData/Buzz_Normal.png
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 		PQS
