--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/2_Desmet.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/2_Desmet.cfg
@@ -82,12 +82,17 @@
 			argumentOfPeriapsis = 82
 			meanAnomalyAtEpochD = 3.45
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Mid.png
+			color = 0.304525167,0.336425304,0.369230777,0.501960814
 		}
 		ScaledVersion
 		{
+			%type = AtmosphericStandard
 			Material
 			{
-				specColor = 0,0,0,0
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 			OnDemand
 			{
