--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
@@ -123,7 +123,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 95000
 			fadeEnd = 140000
 			OnDemand
@@ -131,11 +130,14 @@
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/PluginData/Garner_Color.dds
             			normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/PluginData/Garner_Normal.dds
 			}
+			type = AtmosphericStandard
 			Material
 			{
-				color = 1,1,1,1
-				shininess = 0
-				specColor = 0,0,0,1
+				specColor = 0,0,0,0
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+				color = 0.9,0.9,0.9,1
 			}
 		}
 		PQS
