--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/Lu.cfg
@@ -228,10 +228,15 @@
 		}
 		ScaledVersion
 		{
-			//Material
-			//{
-				
-			//}
+			type = AtmosphericStandard
+			Material
+			{
+				specColor = 0,0,0,0
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+				color = 0.9,0.9,0.9,1
+			}
 			OnDemand
 			{
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Lu/PluginData/Lu_Color.dds
