--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1-Mani.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1-Mani.cfg
@@ -274,7 +274,7 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
+			
 			fadeStart = 25000
 			fadeEnd = 26000
 			OnDemand
@@ -282,10 +282,13 @@
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Mani_Color.dds
 				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Mani_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 		HazardousBody
