--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_Alia.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_Alia.cfg
@@ -116,6 +116,14 @@
 				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/AliaNormalMap.dds
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/AliaScaledColorMap.dds
 			}
+			%type = AtmosphericStandard
+			Material
+			{
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+			}
 		}
 		PQS
 		{
