--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TA_Zzizel.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TA_Zzizel.cfg
@@ -322,7 +322,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 15000
 			fadeEnd = 19000
 			OnDemand
@@ -330,10 +329,13 @@
 				texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Zzizel_Color.dds
 				normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Zzizel_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 	}
