--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
@@ -52,17 +52,19 @@
 		}
         ScaledVersion
         {
-            type = Vacuum
             fadeStart = 300000
             fadeEnd = 450000
             Material
             {
                 texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Tobalk_Color.png
                 normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Tobalk_Normal.png
-		        shininess = 0
-                specColor = 0,0,0,1
                 color = 1.6,1.6,1.6
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
             }
+			%type = AtmosphericStandard
         }
         PQS 
         {
