--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0a-Hadfield.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0a-Hadfield.cfg
@@ -68,17 +68,19 @@
         }
         ScaledVersion
         {
-            type = Vacuum
             fadeStart = 30000
             fadeEnd = 45000
             Material
             {
                 texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Hadfield_Color.png
                 normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Hadfield_Normal.png
-		        shininess = 0
-                specColor = 0,0,0,1
                 color = 1.2,1.2,1.2
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
             }
+			%type = AtmosphericStandard
         }
         PQS 
         {
