--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/2-Hysnoon.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/2-Hysnoon.cfg
@@ -13,16 +13,18 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 15000
 			fadeEnd = 19000
 			Material
 			{                
                 texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Hysnoon_Color.dds
                 normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Hysnoon_Normal.png
-                shininess = 0
-                specColor = 0,0,0,1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
+			%type = AtmosphericStandard
 		}
 		Properties
 		{
