--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
@@ -57,17 +57,19 @@
         }
         ScaledVersion
         {
-            type = Vacuum
             fadeStart = 30000
             fadeEnd = 45000
             Material
             {
                 texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Pi_Color.png
                 normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/PluginData/Pi_Normal.png
-		        shininess = 0
-                specColor = 0,0,0,1
+		        specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
                 color = 1.2,1.2,1.2
             }
+			%type = AtmosphericStandard
         }
         PQS 
         {
