--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
@@ -86,10 +86,11 @@
 			fadeEnd = 15000
 			Material
 			{
-				color = 1,1,1,1
-				specColor = 0.115384601,0.0961538479,0.115384698,1
+				specColor = 0,0,0,1
 				shininess = 0.03
-				
+				rimColor = 0
+				rimBlend = 0
+				color = 1,1,1,1
 			}
 			OnDemand
 			{
