--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
@@ -66,13 +66,15 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 50000
 			fadeEnd = 55000
+			%type = AtmosphericStandard
 			Material
 			{
-				
-				specColor = 0,0,0,0
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 			OnDemand
 			{
