--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
@@ -61,13 +61,15 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 13250
 			fadeEnd = 13750
+			%type = AtmosphericStandard
 			Material
 			{
-				
-				specColor = 0,0,0,0
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 			OnDemand
 			{
