--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
@@ -391,7 +391,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 9000
 			fadeEnd = 9250
 			OnDemand
@@ -399,10 +398,13 @@
 				texture = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Phomos_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Phomos_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 	}
