--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/5_Bercue.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/5_Bercue.cfg
@@ -393,16 +393,19 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			OnDemand
 			{
 				texture = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Bercue_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/Gwargin/PluginData/Bercue_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+				color = 0.9,0.9,0.9,1
 			}
 		}
 	}
