--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
@@ -64,7 +64,6 @@
         }
         ScaledVersion
         {
-            type = Vacuum
             fadeStart = 30000
             fadeEnd = 45000
             Material
@@ -72,9 +71,17 @@
                 texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Fourcroy_Color.png
                 normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Fourcroy_Normal.png
 		        shininess = 0
-                specColor = 0,0,0
-                color = 1,1,1
+                specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+                color = 1,1,1,1
             }
+			%type = AtmosphericStandard
+			Material
+			{
+				
+			}
         }
         PQS 
         {
