--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
@@ -70,7 +70,7 @@
         }
         ScaledVersion
         {
-            type = Vacuum
+            
             fadeStart = 30000
             fadeEnd = 45000
             Material
@@ -78,9 +78,14 @@
                 texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Conscience_Color.png
                 normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Conscience_Normal.png
 		        shininess = 0
-                specColor = 0,0,0
-                color = 0.9,0.9,0.9
+                color = 0.9,0.9,0.9,1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
             }
+			%type = AtmosphericStandard
+			
         }
         PQS 
         {
