--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Smeezobbler.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Smeezobbler.cfg
@@ -295,7 +295,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 15000
 			fadeEnd = 19000
 			OnDemand
@@ -303,10 +302,14 @@
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Smeezobbler_Color.dds
 				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Smeezobbler_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+				color = 0.9,0.9,0.9,1
 			}
 		}
 	}
