--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
@@ -74,6 +74,14 @@
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/JonesScaledColorMap.dds
 				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/JonesNormalMap.dds
 			}
+			%type = AtmosphericStandard
+			Material
+			{
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
+			}
 		}
 		PQS
 		{
