--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/Scatterer/Sinacin_Atmospheres.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/Scatterer/Sinacin_Atmospheres.cfg
@@ -287,8 +287,8 @@
 		m_betaR = 0.002,0.0038,0.0034
 		BETA_MSca = 0.01,0.013,0.013
 		m_mieG = 0.15
-		rimBlend = 30
-		rimpower = 400
+		rimBlend = 0
+		rimPower = 0
 		specR = 1
 		specG = 1
 		specB = 1
@@ -301,7 +301,7 @@
 				skyExposure = 0.15
 				skyAlpha = 0.5
 				skyExtinctionTint = 0.5
-				scatteringExposure = 0.12
+				scatteringExposure = 0.15
 				extinctionThickness = 1
 				postProcessAlpha = 0.6
 				postProcessDepth = 0.5
@@ -310,10 +310,10 @@
 			Item
 			{
 				altitude = 30000
-				skyExposure = 0.1
+				skyExposure = 0.15
 				skyAlpha = 0.5
 				skyExtinctionTint = 0.5
-				scatteringExposure = 0.06
+				scatteringExposure = 0.15
 				extinctionThickness = 1
 				postProcessAlpha = 0.6
 				postProcessDepth = 0.65
