--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3B_Cuspid.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3B_Cuspid.cfg
@@ -374,7 +374,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 15000
 			fadeEnd = 19000
 			OnDemand
@@ -382,10 +381,13 @@
 				texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Cuspid_Color.dds
 				normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Cuspid_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 	}
