--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G2_Pendle.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G2_Pendle.cfg
@@ -108,7 +108,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 15000
 			fadeEnd = 19000
 			OnDemand
@@ -116,10 +115,13 @@
 				texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Pendle_Color.dds
 				normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Pendle_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 	}
