--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TB_Xeititit.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TB_Xeititit.cfg
@@ -317,7 +317,6 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			fadeStart = 15000
 			fadeEnd = 19000
 			OnDemand
@@ -325,10 +324,13 @@
 				texture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Xeititit_Color.dds
 				normals = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Xeititit_Normal.dds
 			}
+			%type = AtmosphericStandard
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 		}
 	}
