--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
@@ -58,13 +58,15 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
 			//fadeStart = 5600
 			//fadeEnd = 5700
+			%type = AtmosphericStandard
 			Material
 			{
-				
-				specColor = 0,0,0,0
+				specColor = 0,0,0,1
+				shininess = 0.03
+				rimColor = 0
+				rimBlend = 0
 			}
 			OnDemand
 			{
